After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 625957 - "visible" option disappears after resuming from suspend state
"visible" option disappears after resuming from suspend state
Status: RESOLVED FIXED
Product: gnome-bluetooth
Classification: Core
Component: applet
2.30.x
Other Linux
: Normal normal
: ---
Assigned To: gnome-bluetooth-general-maint@gnome.bugs
gnome-bluetooth-general-maint@gnome.bugs
Depends on:
Blocks:
 
 
Reported: 2010-08-03 16:39 UTC by Mehmet Giritli
Modified: 2010-08-10 01:20 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Mehmet Giritli 2010-08-03 16:39:20 UTC
I just updated my gnome to 2.30 together with gnome-bluetooth. I am running on kernel 2.6.35 release and my problem is as follows:

Normally (before suspending the computer) I have a "visible" option when I click on the bt icon in the notification area. However, I noticed that, if I once suspend my computer, after the resume I no longer have this option.
Comment 1 Bastien Nocera 2010-08-10 01:20:40 UTC
Fixed in gnome-2-30, gnome-2-32 and master.

commit b94f229b274c672f5942e85717811762facfb7c8
Author: Bastien Nocera <hadess@hadess.net>
Date:   Tue Aug 10 02:16:55 2010 +0100

    Fix visible menu item disappearing after suspend
    
    By resetting lock properly when hiding the menu entry (no adapters
    present).
    
    https://bugzilla.gnome.org/show_bug.cgi?id=625957