Fix visible menu item disappearing after suspend

By resetting lock properly when hiding the menu entry (no adapters
present).

https://bugzilla.gnome.org/show_bug.cgi?id=625957